--- a/dropdowns.html
+++ b/dropdowns.html
@@ -9,14 +9,40 @@
     <title>Title</title>
 </head>
 <body>
-<div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-        <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
-        <li><a href="#">JavaScript</a></li>
-    </ul>
+<div class="container">
+    <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            Example
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li class="dropdown-header">header1...</li>
+            <li><a href="">item 1...</a></li>
+            <li><a href="">item 2...</a></li>
+            <li><a href="">item 3...</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">header2...</li>
+            <li><a href="">item 1...</a></li>
+            <li><a href="">item 2...</a></li>
+            <li><a href="">item 3...</a></li>
+        </ul>
+    </div>
+    <hr>
+    <div class="btn-group">
+        <button class="btn btn-primary">Apple</button>
+        <button class="btn btn-primary">Samsung</button>
+        <div class="btn-group">
+            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                Sony
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="">Tablet</a></li>
+                <li class="divider"></li>
+                <li><a href="">Smart phone</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 </body>
 </html>
